[package]
name = "bitcoin_client"
version = "0.0.4"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "A client for a local or remote Bitcoin instance"
homepage = "https://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/bitcoin-client"
repository = "https://github.com/resolvingarchitecture/bitcoin-client"
publish = true
readme = "README.md"
keywords = ["BTC","Bitcoin"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
simple_logger = "1.6.0"
failure = "0.1.5"
exitfailure = "0.5.1"

bitcoincore-rpc = "0.13.0"
bitcoincore-rpc-json = "0.13.0"

ra_common = "0.0.43"

[dev-dependencies]
assert_cmd = "0.10"
